[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
thread-pool = ["num_cpus","thread_pool"]

[dependencies]
num_cpus = { version = "1.0", optional = true }
thread_pool = {path = "../thread_pool", optional = true}