[package]
name = "http"
version = "0.1.0"
edition = "2021"
authors = ["Oldcat <924417424@qq.com>"]
description = "这是一个简易的HttpServer实现"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
thread-pool = ["num_cpus","thread_pool"]

[dependencies]
num_cpus = { version = "1.0", optional = true }
thread_pool = {path = "../thread_pool", optional = true}